# idl2json

./: .gitignore  Cargo.toml  HACKING.md  LICENSE-APACHE  NOTICE  README.md  default.nix  shell.nix
.github/workflows/: publish.yml  rust.yaml
public/: manifest.json
samples/: all_types.idl  all_types.json  proposal.idl  proposal.json
scripts/: cargo-publish  release.sh
src/: .main.rs.swp  lib.rs  main.rs  test.rs
src/idl2json/: Cargo.toml
src/idl2json/examples/: init.rs
src/idl2json/src/: bytes.rs  candid_types.rs  lib.rs  polyfill.rs  test.rs  typed_conversion.rs  untyped_conversion.rs
src/idl2json_cli/: Cargo.toml  build.rs
src/idl2json_cli/src/: lib.rs  main.rs  tests.rs
src/yaml2candid/: Cargo.toml  README.md
src/yaml2candid/src/: lib.rs  test.rs
src/yaml2candid/tests/: nns-sns-wasm.rs
src/yaml2candid/tests/nns-sns-wasm/: SnsInitPayload.idl  SnsInitPayload.yaml
src/yaml2candid_cli/: Cargo.toml
