[workspace]

members = [
  "src/idl2json",
  "src/idl2json_cli",
  "src/yaml2candid",
  "src/yaml2candid_cli",
]

resolver = "2"

[workspace.package]
# Note: On update, please also update the dependency versions in src/*_cli/Cargo.toml
version = "0.10.1-alpha.0"

[workspace.dependencies]
candid = { version = "0.10.0" }
