[workspace]

members = [
  "src/idl2json",
  "src/idl2json_cli",
  "src/yaml2candid",
  "src/yaml2candid_cli",
]

resolver = "2"

[workspace.package]
# Note: On update, please also update the dependency versions in src/*_cli/Cargo.toml
version = "0.10.1"

[workspace.dependencies]
candid = { version = "0.10.9" }
candid_parser = { version = "0.1.0" }
num-bigint = { version = "0.4.5" }