[workspace]

members = [
  "src/idl2json",
  "src/idl2json_cli",
  "src/yaml2candid",
  "src/yaml2candid_cli",
]

resolver = "2"

[workspace.package]
# Note: On update, please also update the dependency versions in src/*_cli/Cargo.toml
version = "0.10.1"

[workspace.dependencies]
base64 = { version = "0.22.1" }
candid = { version = "0.10.11" }
candid_parser = { version = "0.1.0" }
hex = { version = "0.4.3" }
num-bigint = { version = "0.4.5" }
