[package]
name = "idl2json"
version = "0.8.1" # Should match the candid version below and in idl2json_cli.
authors = ["dfinity <sdk@dfinity.org>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.1"
serde_json = "^1.0"

[dev-dependencies]
json-patch = "0.2.6"