[package]
name = "idl2json"
version = "0.8.7-beta.2"
authors = ["dfinity <sdk@dfinity.org>"]
edition = "2018"
description = "Converts the candid interface description language to JSON."
homepage = "https://github.com/dfinity/idl2json"
documentation = "https://docs.rs/idl2json"
repository = "https://github.com/dfinity/idl2json"
license = "Apache-2.0"
readme = "../../README.md"

categories = ["encoding", "parsing"]
keywords = ["internet-computer", "idl", "candid", "dfinity", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.1"
serde_json = "^1.0"
sha2 = { version = "0.10.6", optional = true }

[dev-dependencies]
json-patch = "0.2.6"
serde = "1"
num-bigint = "0.4.3"

[features]
default = ["crypto"]
crypto = ["sha2"]
