[package]
name = "idl2json_cli"
version = { workspace = true }
authors = ["dfinity <sdk@dfinity.org>"]
edition = "2021"
description = "Converts the candid interface description language to JSON."
homepage = "https://github.com/dfinity/idl2json"
documentation = "https://docs.rs/idl2json"
repository = "https://github.com/dfinity/idl2json"
license = "Apache-2.0"
readme = "../../README.md"

categories = ["encoding", "parsing"]
keywords = ["internet-computer", "idl", "candid", "dfinity", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "idl2json"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
clap = { version = "3.1.6", features = [ "derive" ] }
fn-error-context = "0.2.1"
serde_json = "^1.0"
idl2json = { workspace = true, features = ["clap", "crypto"] }
anyhow = "1"

[build-dependencies]
anyhow = "1"
toml = "0.5.9"
