[package]
name = "idl2json_cli"
version = { workspace = true }
authors = ["dfinity <sdk@dfinity.org>"]
edition = "2021"
description = "Converts the candid interface description language to JSON."
homepage = "https://github.com/dfinity/idl2json"
documentation = "https://docs.rs/idl2json"
repository = "https://github.com/dfinity/idl2json"
license = "Apache-2.0"
readme = "../../README.md"

categories = ["encoding", "parsing"]
keywords = ["internet-computer", "idl", "candid", "dfinity", "json"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "idl2json"
path = "src/main.rs"

[dependencies]
anyhow = "1"
candid = { workspace = true }
candid_parser = { workspace = true }
clap = { version = "4.5.16", features = [ "derive" ] }
fn-error-context = "0.2.1"
idl2json = { path = "../idl2json", version = "0.10.1", features = ["clap", "crypto"] }
serde_json = "^1.0"

[build-dependencies]
anyhow = "1"
toml = "0.8.19"
