[package]
name = "yaml2candid"
version = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = { workspace = true }
candid = { workspace = true }
candid_parser = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
serde = "1"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions = "1.4.0"
