[package]
name = "yaml2candid_cli"
version = "0.9.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = [ "derive" ] }
yaml2candid = { path = "../yaml2candid", version = "0.9.3" }

[build-dependencies]
toml = "0.5.9"
