[package]
name = "yaml2candid_cli"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ] }
yaml2candid = { path = "../yaml2candid" }

[build-dependencies]
toml = "0.5.9"
