[package]
name = "yaml2candid_cli"
version = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = [ "derive" ] }
yaml2candid = { path = "../yaml2candid", version = "0.10.1" }

[build-dependencies]
toml = "0.8.19"
